# tutorial-index-dyanmodb-with-elasticsearch

./: .gitignore  README.md  demo_count_items.py  demo_insert_items.py  docker-compose.yml  pyproject.toml  setup_env.py  utils.py
local_lambda_handler/: handler.py  requirements.txt
local_lambda_handler/elasticsearch-7.5.1.dist-info/: RECORD
local_lambda_handler/elasticsearch_dsl-7.1.0.dist-info/: RECORD
local_lambda_handler/furl-2.1.0.dist-info/: RECORD
local_lambda_handler/orderedmultidict-1.0.1.dist-info/: RECORD
